# raccoon-optimizer

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt
src/raccoon-optimizer/: CMakeLists.txt  edge.h  g2o_loader.cpp  g2o_loader.h  graph.cpp  graph.h  vertex.h
test/: simulator_out.g2o
